{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "b114d4f0-b62c-4254-bb22-7b0815507569",
            "actions": [
                {
                    "name": "Grow",
                    "type": "Button",
                    "id": "b00d6ee6-0aeb-45dd-947e-ad5ee898dd2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "21d22144-8882-46a9-ab99-5a9180a4e130",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "05238dfa-41b8-4498-adf1-57cb730b7bd7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateY",
                    "type": "Button",
                    "id": "efd9ceaf-01d1-48f6-81f0-df4361ea6289",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59492ad1-0d77-4dff-9250-315398fb5f2b",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e09ccf20-da04-4952-88ff-8812995ffbd5",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc8c2021-0342-4358-8995-bc643a82fe32",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f20c11b3-0301-436a-beb4-287582f3051b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}